--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   intl: ^0.16.1
   image_picker: ^0.6.3+1
   dio: ^2.1.3
+  back_button_interceptor: ^4.2.3
 
 dev_dependencies:
   flutter_test:
