--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="HalfWaiter Admin"
-        android:icon="@mipmap/ic_logo">
+        android:icon="@mipmap/ic_logo_final">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
