--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   image_picker: ^0.6.3+1
   dio: ^2.1.3
   back_button_interceptor: ^4.2.3
+  progress_dialog: ^1.2.4
 
 dev_dependencies:
   flutter_test:
